tests/models/struct/unnamed/i32/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2.0)]
    i32
);
fn main() {}
